project modified with new section and added footer project complected

--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
             </div>
           </nav>
     </header>
+    <!--main section starts here-->
     <main>
+      <!--home carousel section-->
         <section id="home-carousel">
             <div id="carouselExampleCaptions" class="carousel slide">
                 <div class="carousel-indicators">
@@ -198,8 +200,9 @@
                 </button>
               </div>
         </section>
+        <!--featured products section-->
         <section class="featured-products">
-         <div class="container">
+         <div class="container-fluid">
             <h2 class="text-center feature-products-title">Featured Products</h2>
             <div id="feature-tab-button">
               <ul class="nav nav-pills mb-3 justify-content-center" id="pills-tab" role="tablist">
@@ -238,7 +241,7 @@
                     </div>
                   </div>
                   <div class="row p-3">
-                    <div class="col-md-3 col-sm-6 zoom-in-hover button-hover">
+                    <div class="col-lg-3 col-md-6 col-sm-12 zoom-in-hover button-hover">
                       <div class="card border-0 w-100">
                         <picture class="p-5">
                           <source media="(max-width: 720px)" srcset="//i03.appmifile.com/584_item_in/04/07/2024/69af272b112bd2935f0f00559d76c966.png?thumb=1&w=160&f=webp&q=85, //i03.appmifile.com/584_item_in/04/07/2024/69af272b112bd2935f0f00559d76c966.png?thumb=1&w=320&f=webp&q=85 2x, //i03.appmifile.com/584_item_in/04/07/2024/69af272b112bd2935f0f00559d76c966.png?thumb=1&w=480&f=webp&q=85 3x">
@@ -252,7 +255,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-md-3 col-sm-6 zoom-in-hover button-hover">
+                    <div class="col-lg-3 col-md-6 col-sm-12 zoom-in-hover button-hover">
                       <div class="card border-0 w-100">
                         <picture class="p-5">
                           <source media="(max-width: 720px)" srcset="//i03.appmifile.com/976_item_in/17/12/2024/cf691057ac703ba8259dd8d3ed2951c7.png?thumb=1&w=160&f=webp&q=85, //i03.appmifile.com/976_item_in/17/12/2024/cf691057ac703ba8259dd8d3ed2951c7.png?thumb=1&w=320&f=webp&q=85 2x, //i03.appmifile.com/976_item_in/17/12/2024/cf691057ac703ba8259dd8d3ed2951c7.png?thumb=1&w=480&f=webp&q=85 3x">
@@ -266,7 +269,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-md-3 col-sm-6 zoom-in-hover button-hover">
+                    <div class="col-lg-3 col-md-6 col-sm-12 zoom-in-hover button-hover">
                       <div class="card border-0 w-100">
                         <picture class="p-5">
                           <source media="(max-width: 720px)" srcset="//i03.appmifile.com/122_item_in/17/12/2024/d60b0e9706f101e2b3438931ef65cc45.png?thumb=1&w=160&f=webp&q=85, //i03.appmifile.com/122_item_in/17/12/2024/d60b0e9706f101e2b3438931ef65cc45.png?thumb=1&w=320&f=webp&q=85 2x, //i03.appmifile.com/122_item_in/17/12/2024/d60b0e9706f101e2b3438931ef65cc45.png?thumb=1&w=480&f=webp&q=85 3x">
@@ -280,7 +283,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-md-3 col-sm-6 zoom-in-hover button-hover">
+                    <div class="col-lg-3 col-md-6 col-sm-12 zoom-in-hover button-hover">
                       <div class="card border-0 w-100">
                         <picture class="p-5">
                           <source media="(max-width: 720px)" srcset="//i03.appmifile.com/671_item_in/19/11/2024/00f00d1b293840252e50d461fea78ae0.png?thumb=1&w=160&f=webp&q=85, //i03.appmifile.com/671_item_in/19/11/2024/00f00d1b293840252e50d461fea78ae0.png?thumb=1&w=320&f=webp&q=85 2x, //i03.appmifile.com/671_item_in/19/11/2024/00f00d1b293840252e50d461fea78ae0.png?thumb=1&w=480&f=webp&q=85 3x">
@@ -538,46 +541,47 @@
               </div>
           </div>
         </section>
+        <!--exclusive offers section-->
         <section class="exclusive-offers m-sm-2  m-md-5">
           <h2 class="text-center  mb-sm-3 mb-md-4 mb-lg-5 ">Exclusive Offers</h2>
           <div class="container-fluid">
             <div class="row">
-              <div class="col-sm-6 col-md-3 col-lg-4 button-hover zoom-in-hover">
-                <div class="card w-100 p-md-2 overflow-hidden">
-                  <picture>
-                    <source media="(max-width: 720px)" srcset="//i03.appmifile.com/377_operator_in/04/11/2024/103ae8de6c92884fa74e8a5c04abf721.png?thumb=1&f=webp&q=85">
-                    <source media="(min-width: 0px)" srcset="//i03.appmifile.com/567_operator_in/04/11/2024/9d0913b96466cf75939e80942bcf48c5.png?thumb=1&w=420&f=webp&q=85, //i03.appmifile.com/567_operator_in/04/11/2024/9d0913b96466cf75939e80942bcf48c5.png?thumb=1&w=840&f=webp&q=85 2x">
-                    <img src="//i03.appmifile.com/567_operator_in/04/11/2024/9d0913b96466cf75939e80942bcf48c5.png?thumb=1&w=420&q=85" alt="Smart TV" class="w-100">
-                  </picture>
-                  <div class="card-body text-center m-md-3">
+              <div class="col-sm-12 col-md-6 col-lg-4 button-hover zoom-in-hover">
+                <div class="card w-100 p-md-2 overflow-hidden exclusive-wrapper">
+                    <picture>
+                      <source media="(max-width: 720px)" srcset="//i03.appmifile.com/377_operator_in/04/11/2024/103ae8de6c92884fa74e8a5c04abf721.png?thumb=1&f=webp&q=85">
+                      <source media="(min-width: 0px)" srcset="//i03.appmifile.com/567_operator_in/04/11/2024/9d0913b96466cf75939e80942bcf48c5.png?thumb=1&w=420&f=webp&q=85, //i03.appmifile.com/567_operator_in/04/11/2024/9d0913b96466cf75939e80942bcf48c5.png?thumb=1&w=840&f=webp&q=85 2x">
+                      <img src="//i03.appmifile.com/567_operator_in/04/11/2024/9d0913b96466cf75939e80942bcf48c5.png?thumb=1&w=420&q=85" alt="Smart TV" class="w-100">
+                    </picture>
+                  <div class="card-body text-center mt-3">
                     <h4 class="card-title">Smart TV</h4>
                     <h6>Biggest deals on Smart TVs</h6>
                     <button class="btn btn-dark">Learn More</button>
                   </div>
                 </div>
               </div>
-              <div class="col-sm-6 col-md-3 col-lg-4 button-hover zoom-in-hover">
-                <div class="card w-100 p-md-2 overflow-hidden">
+              <div class="col-sm-12 col-md-6 col-lg-4 button-hover zoom-in-hover">
+                <div class="card w-100 p-md-2 overflow-hidden exclusive-wrapper">
                   <picture>
                     <source media="(max-width: 720px)" srcset="//i03.appmifile.com/30_operator_in/04/11/2024/d0b064c0d28653899e6c345b37c84eaa.png?thumb=1&f=webp&q=85">
                     <source media="(min-width: 0px)" srcset="//i03.appmifile.com/69_operator_in/04/11/2024/6472a783e9d88fd70ced3d6cef0738da.png?thumb=1&w=420&f=webp&q=85, //i03.appmifile.com/69_operator_in/04/11/2024/6472a783e9d88fd70ced3d6cef0738da.png?thumb=1&w=840&f=webp&q=85 2x">
                     <img src="//i03.appmifile.com/69_operator_in/04/11/2024/6472a783e9d88fd70ced3d6cef0738da.png?thumb=1&w=420&q=85" alt="Power Banks" class="w-100">
                   </picture>
-                  <div class="card-body text-center m-md-3">
+                  <div class="card-body text-center mt-3">
                     <h4 class="card-title">Power Banks</h4>
                     <h6>Power up, Pay less</h6>
                     <button class="btn btn-dark">Learn More</button>
                   </div>
                 </div>
               </div>
-              <div class="col-sm-6 col-md-3 col-lg-4 button-hover zoom-in-hover ">
-                <div class="card w-100 p-md-2 overflow-hidden">
+              <div class="col-sm-12 col-md-6 col-lg-4 button-hover zoom-in-hover ">
+                <div class="card w-100 p-md-2 overflow-hidden exclusive-wrapper">
                   <picture>
                     <source media="(max-width: 720px)" srcset="//i03.appmifile.com/956_operator_in/04/11/2024/4c2632ca808345744a9dad9108c35278.png?thumb=1&f=webp&q=85">
                     <source media="(min-width: 0px)" srcset="//i03.appmifile.com/375_operator_in/04/11/2024/7c86d4326267e04ab3209ed000775d57.png?thumb=1&w=420&f=webp&q=85, //i03.appmifile.com/375_operator_in/04/11/2024/7c86d4326267e04ab3209ed000775d57.png?thumb=1&w=840&f=webp&q=85 2x">
                     <img src="//i03.appmifile.com/375_operator_in/04/11/2024/7c86d4326267e04ab3209ed000775d57.png?thumb=1&w=420&q=85" alt="Audio Products" class="w-100">
                   </picture>
-                  <div class="card-body text-center m-md-3">
+                  <div class="card-body text-center mt-3">
                     <h4 class="card-title">Audio Products</h4>
                     <h6>For the love of Music</h6>
                     <button class="btn btn-dark">Learn More</button>
@@ -587,11 +591,12 @@
             </div>
           </div>
         </section>
+        <!--explore xiaomi  section-->
         <section class="explore-xiaomi m-sm-2  m-md-5">
           <h2 class="text-center mb-5">Explore Xiaomi</h2>
-          <div class="container">
+          <div class="container-fluid">
             <div class="row">
-              <div class="col-6 button-effects">
+              <div class="col-sm-12 col-md-6 button-effects">
                 <div class="card w-100">
                   <img src="//i03.appmifile.com/331_operator_in/19/03/2024/67f6f95857019683ed6a64c321c8c2bf.jpg?thumb=1&w=660&q=85" class="card-img-top" alt="image">
                   <div class="card-body text-center">
@@ -600,7 +605,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-6 button-effects">
+              <div class="col-sm-12 col-md-6 button-effects">
                 <div class="card w-100">
                   <img src="//i03.appmifile.com/204_operator_in/04/03/2024/49f3b8d0fbf0f8c9fef88ea2f9ac4a7a.jpg?thumb=1&w=660&q=85" class="card-img-top" alt="image">
                   <div class="card-body text-center">
@@ -612,20 +617,72 @@
             </div>
           </div>
         </section>
-        <section class="xiaomi-support m-sm-2  m-md-5">
-          <h2 class="text-center m-sm-2  m-md-5">Xiaomi Support</h2>
-          <div class="container">
+        <!--xiaomi support section-->
+        <section class="xiaomi-support m-2  m-md-5">
+          <h2 class="text-center m-2  m-md-5">Xiaomi Support</h2>
+          <div class="container-fluid">
             <div class="row">
-              <div class="col-3"></div>
-              <div class="col-3"></div>
-              <div class="col-3"></div>
-              <div class="col-3"></div>
+              <div class="col-md-3 col-sm-6 text-center support-wrapper">
+                <div class="card w-100 bg-transparent border-0">
+                  <div class="m-3">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor" class="bi bi-arrow-return-left" viewBox="0 0 16 16">
+                      <path fill-rule="evenodd" d="M14.5 1.5a.5.5 0 0 1 .5.5v4.8a2.5 2.5 0 0 1-2.5 2.5H2.707l3.347 3.346a.5.5 0 0 1-.708.708l-4.2-4.2a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 8.3H12.5A1.5 1.5 0 0 0 14 6.8V2a.5.5 0 0 1 .5-.5"/>
+                    </svg>
+                  </div>
+                  <div class="card-body mi-icon">
+                    <h5 class="card-title">Xiaomi Exchange</h5>
+                    <p class="card-text">Save More & Go Green With Your Old Device</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3 col-sm-6 text-center support-wrapper">
+                <div class="card w-100 bg-transparent border-0">
+                  <div class="m-3">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor" class="bi bi-shield" viewBox="0 0 16 16">
+                      <path d="M5.338 1.59a61 61 0 0 0-2.837.856.48.48 0 0 0-.328.39c-.554 4.157.726 7.19 2.253 9.188a10.7 10.7 0 0 0 2.287 2.233c.346.244.652.42.893.533q.18.085.293.118a1 1 0 0 0 .101.025 1 1 0 0 0 .1-.025q.114-.034.294-.118c.24-.113.547-.29.893-.533a10.7 10.7 0 0 0 2.287-2.233c1.527-1.997 2.807-5.031 2.253-9.188a.48.48 0 0 0-.328-.39c-.651-.213-1.75-.56-2.837-.855C9.552 1.29 8.531 1.067 8 1.067c-.53 0-1.552.223-2.662.524zM5.072.56C6.157.265 7.31 0 8 0s1.843.265 2.928.56c1.11.3 2.229.655 2.887.87a1.54 1.54 0 0 1 1.044 1.262c.596 4.477-.787 7.795-2.465 9.99a11.8 11.8 0 0 1-2.517 2.453 7 7 0 0 1-1.048.625c-.28.132-.581.24-.829.24s-.548-.108-.829-.24a7 7 0 0 1-1.048-.625 11.8 11.8 0 0 1-2.517-2.453C1.928 10.487.545 7.169 1.141 2.692A1.54 1.54 0 0 1 2.185 1.43 63 63 0 0 1 5.072.56"/>
+                    </svg>
+                  </div>
+                  <div class="card-body mi-icon">
+                    <h5 class="card-title">Mi Complete Prot..</h5>
+                    <p class="card-text">Protect Your Device In Less Than ₹2/Day</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3 col-sm-6 text-center support-wrapper">
+                <div class="card w-100 bg-transparent border-0">
+                  <div class="m-3">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor" class="bi bi-geo-alt" viewBox="0 0 16 16">
+                      <path d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A32 32 0 0 1 8 14.58a32 32 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10"/>
+                      <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4m0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
+                    </svg>
+                  </div>
+                  <div class="card-body mi-icon">
+                    <h5 class="card-title">Service Centers</h5>
+                    <p class="card-text">Right Where You Need Us</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-3 col-sm-6 text-center support-wrapper">
+                <div class="card w-100 bg-transparent border-0">
+                  <div class="m-3">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor" class="bi bi-shield-check" viewBox="0 0 16 16">
+                      <path d="M5.338 1.59a61 61 0 0 0-2.837.856.48.48 0 0 0-.328.39c-.554 4.157.726 7.19 2.253 9.188a10.7 10.7 0 0 0 2.287 2.233c.346.244.652.42.893.533q.18.085.293.118a1 1 0 0 0 .101.025 1 1 0 0 0 .1-.025q.114-.034.294-.118c.24-.113.547-.29.893-.533a10.7 10.7 0 0 0 2.287-2.233c1.527-1.997 2.807-5.031 2.253-9.188a.48.48 0 0 0-.328-.39c-.651-.213-1.75-.56-2.837-.855C9.552 1.29 8.531 1.067 8 1.067c-.53 0-1.552.223-2.662.524zM5.072.56C6.157.265 7.31 0 8 0s1.843.265 2.928.56c1.11.3 2.229.655 2.887.87a1.54 1.54 0 0 1 1.044 1.262c.596 4.477-.787 7.795-2.465 9.99a11.8 11.8 0 0 1-2.517 2.453 7 7 0 0 1-1.048.625c-.28.132-.581.24-.829.24s-.548-.108-.829-.24a7 7 0 0 1-1.048-.625 11.8 11.8 0 0 1-2.517-2.453C1.928 10.487.545 7.169 1.141 2.692A1.54 1.54 0 0 1 2.185 1.43 63 63 0 0 1 5.072.56"/>
+                      <path d="M10.854 5.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 7.793l2.646-2.647a.5.5 0 0 1 .708 0"/>
+                    </svg>
+                  </div>
+                  <div class="card-body mi-icon">
+                    <h5 class="card-title">Mi Extended Warr...</h5>
+                    <p class="card-text">Ensure Your Devices For An Extra Year At Nominal Cost</p>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </section>
+        <!--footer section-->
         <footer class="pb-2">
           <section class="footer-main-section">
-            <div class="container">
+            <div class="container-fluid">
               <div class="row">
                 <div class="col-md-8">
                   <div class="row">
@@ -721,8 +778,8 @@
                             <picture class="mi-image app-mi-store__qr-code-image"><source media="(min-width: 0px)" type="image/webp" srcset="//i03.appmifile.com/32_operator_in/22/11/2022/9b4d58f78a203b82a56bdd11692d4ba1.png?thumb=1&amp;w=80&amp;f=webp&amp;q=85, //i03.appmifile.com/32_operator_in/22/11/2022/9b4d58f78a203b82a56bdd11692d4ba1.png?thumb=1&amp;w=160&amp;f=webp&amp;q=85 2x"><img class="w-100 p-3" src="//i03.appmifile.com/32_operator_in/22/11/2022/9b4d58f78a203b82a56bdd11692d4ba1.png?thumb=1&amp;w=80&amp;q=85" alt="Get mi store app"></picture>
                           </div>
                           <div class="col-8 pt-4">
-                            <h5>Get mi store app</h5>
-                            <p>Scan for our up-to-date information for better shopping experience</p>
+                            <h6>Get mi store app</h6>
+                            <p class="get-mi-text">Scan for our up-to-date information for better shopping experience</p>
                           </div>
                         </div>
                         <div class="row p-3 app-download">
