--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
             <div class="container-fluid">
               <div class="row">
                 <div class="col-md-8">
-                  <div class="row">
+                  <div class="row d-none d-sm-flex">
                     <div class="col-md-3 col-sm-6">
                       <a href="#" class="btn"></a><h6>Support</h6></a>
                       <ul class="p-0 m-0">
